--- a/12-book-store/backend/package.json
+++ b/12-book-store/backend/package.json
@@ -1,23 +1,38 @@
 {
-  "name": "server",
+  "name": "book-store-server-side",
   "version": "1.0.0",
-  "description": "",
+  "description": "Backend API for the Book Store application using Express and MongoDB.",
   "main": "app.js",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "colors": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.0",
+    "figlet": "^1.8.0",
+    "helmet": "^8.1.0",
     "http-status-codes": "^2.3.0",
-    "mongodb": "^6.9.0",
+    "jest": "^29.7.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.15.0",
     "mongodb-connection-string-url": "^3.0.1",
-    "mongoose": "^8.7.0"
+    "mongodb-memory-server": "^10.1.4",
+    "mongoose": "^8.7.0",
+    "xss": "^1.0.15"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "node --watch app.js"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "nodejs",
+    "express",
+    "mongodb",
+    "mongoose",
+    "backend",
+    "REST API"
+  ],
+  "author": "MaxGitHub0515",
   "license": "ISC"
 }
