--- a/12-book-store/backend/package.json
+++ b/12-book-store/backend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Backend API for the Book Store application using Express and MongoDB.",
   "main": "app.js",
+  "type": "module",
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "colors": "^1.4.0",
