--- a/13-chat-app/package.json
+++ b/13-chat-app/package.json
@@ -22,10 +22,12 @@
   "description": "Chat Application which allows you to communicate and connect with others",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "cookie": "^1.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2"
   },
