--- a/13-chat-app/package.json
+++ b/13-chat-app/package.json
@@ -29,7 +29,8 @@
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.13.2"
+    "mongoose": "^8.13.2",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "colors": "^1.4.0",
